--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "name": "inventory-management-frontend",
-    "author": "Stefan Gass & Isabella Zaby",
+    "author": "Stefan Gass; until release 22.06.1: Stefan Gass, Isabella Zaby",
+    "description": "In cooperation with the University of Applied Sciences Burgenland, department Information Technology",
     "license": "MIT",
-    "version": "1.0",
+    "version": "23.03.1",
     "private": true,
     "scripts": {
         "dev": "next dev -p 3004",
@@ -12,29 +13,29 @@
         "type-check": "tsc"
     },
     "dependencies": {
-        "@emotion/cache": "^11.7.1",
-        "@emotion/react": "^11.9.0",
-        "@emotion/server": "^11.4.0",
-        "@emotion/styled": "^11.8.1",
-        "@mui/icons-material": "^5.6.1",
-        "@mui/material": "^5.7.0",
-        "@mui/x-data-grid": "^5.8.0",
-        "@mui/x-date-pickers": "^5.0.0-alpha.6",
+        "@emotion/cache": "^11.10.5",
+        "@emotion/react": "^11.10.5",
+        "@emotion/server": "^11.10.0",
+        "@emotion/styled": "^11.10.5",
+        "@mui/icons-material": "^5.11.0",
+        "@mui/material": "^5.11.7",
+        "@mui/x-data-grid": "^5.17.21",
+        "@mui/x-date-pickers": "^5.0.16",
         "base-64": "^1.0.0",
-        "date-fns": "^2.28.0",
-        "next": "^12.1.4",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "sharp": "^0.30.3"
+        "date-fns": "^2.29.3",
+        "jsqr": "^1.4.0",
+        "next": "^13.1.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "qrcode.react": "^3.1.0",
+        "recharts": "2.3.2",
+        "signature_pad": "^4.1.4"
     },
     "devDependencies": {
-        "@mui/types": "^7.1.3",
-        "@types/node": "^17.0.23",
-        "@types/react": "^17.0.44",
-        "@types/react-dom": "^17.0.15",
-        "prettier": "2.6.2",
-        "sass": "^1.52.3",
-        "tslib": "^2.4.0",
-        "typescript": "^4.6.3"
+        "@types/node": "^18.11.18",
+        "@types/react": "^18.0.27",
+        "prettier": "2.8.3",
+        "sass": "^1.58.0",
+        "typescript": "^4.9.5"
     }
 }
