--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "buildtest": "NODE_ENV=${NODE_ENV:=test} next build",
     "start": "next start -p 3004",
     "type-check": "tsc",
-    "testE2E": "npx playwright test"
+    "testE2E": "npx playwright test",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
@@ -34,8 +36,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.32.2",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
+    "@types/testing-library__jest-dom": "5.14.5",
+    "jest": "29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "next-router-mock": "^0.9.3",
     "prettier": "2.8.3",
     "sass": "^1.58.0",
     "typescript": "^4.9.5"
