--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "next start -p 3004",
     "type-check": "tsc",
     "testE2E": "npx playwright test",
+    "testE2EVisible": "npx playwright test --headed",
     "test": "jest --watch",
     "test:ci": "jest --ci"
   },
