--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "buildtest": "NODE_ENV=${NODE_ENV:=test} next build",
     "start": "next start -p 3004",
     "type-check": "tsc",
+    "testE2EInstall": "npx playwright install",
     "testE2E": "npx playwright test",
     "testE2EVisible": "npx playwright test --headed",
     "test": "jest --watch",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
     "@emotion/cache": "^11.10.5",
