--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/x-date-pickers": "^5.0.16",
     "base-64": "^1.0.0",
     "date-fns": "^2.29.3",
+    "js-cookie": "^3.0.4",
     "jsqr": "^1.4.0",
     "next": "^13.1.6",
     "qrcode.react": "^3.1.0",
